--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       const inputedBtc = Number(amountInBtc.value);
       const selectedCUR = Number(currency.value);
       //   console.log(selectedUSD);
+      //   console.log(selectedUCUR);
 
       const formular = inputedBtc * selectedCUR;
       result.innerHTML = formular;
